--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "ag-grid-angular": "^31.0.2",
     "@ng-bootstrap/ng-bootstrap": "^14.2.0",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.12.0",
+    "@ng-select/ng-select": "10.0.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.4",
