--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,4 @@
 {
-    "tabWidth": 4,
-    "bracketSpacing": true,
-    "endOfLine": "auto",
-    "singleQuote": true,
-    "trailingComma": "all"
+  "tabWidth": 2,
+  "useTabs": false
 }
