--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,8 @@
 {
-    "tabWidth": 4,
-    "bracketSpacing": true,
-    "endOfLine": "auto",
-    "singleQuote": true,
-    "trailingComma": "all"
+  "tabWidth": 4,
+  "bracketSpacing": true,
+  "endOfLine": "auto",
+  "singleQuote": true,
+  "trailingComma": "all",
+  "printWidth": 120
 }
