--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,6 +44,9 @@
       ],
       "@fms-module/donate": [
         "src/app/module/donate/index.ts"
+      ],
+      "@fms-module/match-result": [
+        "src/app/module/match-result/index.ts"
       ]
     }
   },
