--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -3,10 +3,10 @@ WORKDIR angular
 COPY package.json package.json
 RUN npm install
 COPY . .
-RUN npm run build
+RUN npm run build -- --configuration=production
 
 FROM nginx:stable-perl AS runner
 EXPOSE 80
 COPY nginx.conf /etc/nginx/conf.d/default.conf
-COPY --from=builder /angular/dist/* /usr/share/nginx/html
+COPY --from=builder /angular/dist/fc-management-frontend/* /usr/share/nginx/html
 CMD ["nginx", "-g", "daemon off;"]
