handle UI and integrate API

--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,6 @@
   "endOfLine": "auto",
   "singleQuote": true,
   "trailingComma": "all",
-  "printWidth": 120
+  "semi": true,
+  "printWidth": 80
 }
