--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -3,7 +3,7 @@ WORKDIR angular
 COPY package.json package.json
 RUN npm install
 COPY . .
-RUN npm run build
+RUN npm run build -- --configuration=production
 
 FROM nginx:stable-perl AS runner
 EXPOSE 80
