--- a/.github/workflows/build-env-test.yaml
+++ b/.github/workflows/build-env-test.yaml
@@ -8,6 +8,7 @@ on:
         branches: ['dev']
     pull_request:
         branches: ['dev']
+        types: [closed]
 
 env:
     artifactName: 'football-club'
