handle update and delete member

--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,10 @@
               "src/template.scss",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "allowedCommonJsDependencies": [
+              "sweetalert2"
+            ]
           },
           "configurations": {
             "production": {
